Updated content on "stream API" and some refactorings.